# rustyriver

./: Cargo.toml  LICENSE  README.md
src/: gui.rs  main.rs  old_gui.rs
src/HTML/: html_content.html
