[package]
name = "permit-scraper"
version = "0.1.0"
authors = ["riomcmahon <48159564+rmcsqrd@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.6"
tokio = { version = "0.2", features = ["full"] }
